DL/TransformerSummarization/old_app/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-model-app
spec:
  selector:
    app: iris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
#  type: NodePort
  type: LoadBalancer
