DL/TransformerSummarization/old_app/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite_target: /

spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: iris-model-app
              port:
                number: 80
